--- a/prepros.config
+++ b/prepros.config
@@ -914,6 +914,12 @@
     },
     "files": [
       {
+        "file": "scss/main.scss",
+        "config": {
+          "customOutput": "css\\main.css"
+        }
+      },
+      {
         "file": "scss/pages/_home.scss",
         "config": {
           "customOutput": "css\\main.css"
